<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6E6E5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/play_sound"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/mixSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="MixSound On "
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/soundsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#96C1BD"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/mixSound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playSound1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play"
                app:srcCompat="@android:drawable/ic_media_play" />

            <EditText
                android:id="@+id/soundTitle1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="text"
                android:text="@string/no_sound_selected"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/chooseSound1"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/choose"
                android:textSize="9sp" />

            <ImageButton
                android:id="@+id/recordSound1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/record_sound"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playSound2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play"
                app:srcCompat="@android:drawable/ic_media_play" />

            <EditText
                android:id="@+id/soundTitle2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="text"
                android:text="@string/no_sound_selected"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/chooseSound2"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/choose"
                android:textSize="9sp" />

            <ImageButton
                android:id="@+id/recordSound2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/record_sound"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/playSound3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play"
                app:srcCompat="@android:drawable/ic_media_play" />

            <EditText
                android:id="@+id/soundTitle3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="monospace"
                android:inputType="text"
                android:text="@string/no_sound_selected"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/chooseSound3"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/choose"
                android:textSize="9sp" />

            <ImageButton
                android:id="@+id/recordSound3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/record_sound"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
